# hermes-plugin-hswitch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
hermes_hswitch/: __init__.py  cli.py  core.py  plugin.py
tests/: test_core.py  test_plugin.py
