[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-plugin-hswitch"
version = "0.1.3"
description = "Switch active Hermes OpenAI Codex OAuth accounts without editing auth.json."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "hswitch contributors" },
]
keywords = [
  "hermes-agent",
  "hermes-plugin",
  "codex",
  "openai",
  "oauth",
  "credential-switcher",
  "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/OWNER/hermes-plugin-hswitch"
Repository = "https://github.com/OWNER/hermes-plugin-hswitch"
Issues = "https://github.com/OWNER/hermes-plugin-hswitch/issues"

[project.scripts]
hswitch = "hermes_hswitch.cli:main"

[project.entry-points."hermes_agent.plugins"]
hswitch = "hermes_hswitch.plugin"

[tool.setuptools.packages.find]
include = ["hermes_hswitch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
